--- a/public/views/home.html
+++ b/public/views/home.html
@@ -4,14 +4,16 @@
 
     <md-content>
         <section layout="row" layout-sm="column" layout-align="center center">
-            <md-button class="md-raised col-md-3 col-sm-3" ng-click="selectTransport('driver')">I'm a driver</md-button>
-            <div class="col-md-1 col-sm-0"></div>
-            <md-button class="md-raised col-md-3 col-sm-3" ng-click="selectTransport('passenger')">I'm a passenger
-            </md-button>
+            <div ng-repeat="type in types" class="col-lg-3 col-md-6 col-sm-12 side-margin typeSelect" ng-click="selectTransport(type.name)">
+                <h1 class="col-lg-12">{{type.h1}}</h1>
+                <h3 style="height: 20px;">{{type.h3}}</h3>
+                <div class="col-lg-12 col-sm-12 bottom-margin">
+                    <img src="../img/{{type.name}}.png" width="100%" >
+                </div>
+            </div>
         </section>
         <div>
             <section class="top-margin" layout="row" layout-sm="row" layout-align="center center">
-
                 <div class="col-md-7 col-sm-6 well" ng-if="options['driver'] || options['passenger']">
                     <h1>{{options['driver']?'Driver':(options['passenger']?'Passenger':'')}}</h1>
 
