add auth check and log in form, add animation to driver/passenger buttons

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,3 +33,15 @@
     margin-bottom: 10px;
     background-color: rgba(125, 171, 178, 0.93) ;;
 }
+.opacity-hover{
+    border-radius: 10px;
+    -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+}
+.opacity-hover:hover{
+    opacity: 0.9;
+    -webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+}
