--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -1,2 +1,61 @@
+<div class="left-margin col-lg-4 col-md-3 col-sm-1"></div>
+<div class="container col-lg-4 col-md-6 col-sm-10">
+    <form class="form-signin" name="loginForm">
+        <h2 class="form-signin-heading">Please sign in</h2>
 
-YOYOYOY
+        <div class="row">
+            <div class="col-xs-6 col-sm-6 col-md-6">
+                <div class="form-group">
+                    <label for="inputFirstName" class="sr-only">First Name</label>
+                    <input type="text" id="inputFirstName" class="form-control" placeholder="First Name" required
+                           autofocus ng-model="user.f_name">
+                </div>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6">
+                <div class="form-group">
+                    <label for="inputLastName" class="sr-only">Last Name</label>
+                    <input type="text" id="inputLastName" class="form-control" placeholder="Last Name" required
+                           autofocus ng-model="user.l_name">
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="uniEmail" class="sr-only">University Email address</label>
+            <input type="email" id="uniEmail" class="form-control" placeholder="Email address" required autofocus
+                   ng-model="user.uni_mail">
+        </div>
+        <div class="form-group">
+            <label for="altEmail" class="sr-only">Alternative Email address</label>
+            <input type="email" id="altEmail" class="form-control" placeholder="Email address" required autofocus
+                   ng-model="user.alt_mail">
+        </div>
+        <div class="form-group">
+            <label for="inputPhone" class="sr-only">Phone</label>
+            <input type="text" id="inputPhone" class="form-control" placeholder="Phone" required autofocus
+                   ng-model="user.phone">
+        </div>
+
+        <div class="row">
+            <div class="col-xs-6 col-sm-6 col-md-6">
+                <div class="form-group">
+                    <label for="password" class="sr-only">Password</label>
+                    <input type="password" id="password" class="form-control" placeholder="Password" required autofocus
+                           ng-model="user.password">
+                </div>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6">
+                <div class="form-group" ng-class="{'has-success':passwordConfirmed()}">
+                    <label for="repeatPassword" class="sr-only">Repeat password</label>
+                    <input type="password" id="repeatPassword" class="form-control" placeholder="Repeat Password"
+                           required autofocus ng-model="user.passwordRepeat">
+                </div>
+            </div>
+        </div>
+
+        <input type="submit" value="Register" class="btn btn-info btn-block">
+
+    </form>
+
+</div>
+<div class="right-margin col-lg-4 col-md-3 col-sm-1"></div>
