--- a/public/views/login.html
+++ b/public/views/login.html
@@ -3,8 +3,8 @@
     <form class="form-signin" name="loginForm">
         <h2 class="form-signin-heading">Please sign in</h2>
         <div class="form-group">
-            <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="text" id="inputEmail" class="form-control" placeholder="Email address" required autofocus ng-model="user.email">
+            <label for="inputEmail" class="sr-only">Username</label>
+            <input type="text" id="inputEmail" class="form-control" placeholder="Username" required autofocus ng-model="user.userName">
         </div>
 
         <br/>
