--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,3 +97,16 @@
 
 }
 
+.spinner{
+    /*display: block;*/
+    /*position: fixed;*/
+    /*top:50%;*/
+    /*left: 50%;*/
+}
+
+.main{
+    width: 100%;
+    height: 2000px;
+    background: yellow;
+    display: block;
+}
