--- a/public/css/style.css
+++ b/public/css/style.css
@@ -104,6 +104,14 @@
     /*left: 50%;*/
 }
 
+.profile-pic{
+    text-align: center;
+    max-width:200px;
+    max-height: 200px;
+    border:2px solid #dcdcdc;
+    border-radius: 100px;
+}
+
 .main{
     width: 100%;
     height: 2000px;
