--- a/public/views/editUser/updateInfo/updateInfo.html
+++ b/public/views/editUser/updateInfo/updateInfo.html
@@ -1,6 +1,8 @@
 <form class="form-signin" name="loginForm" ng-submit="updateInfo()">
-    <h2 class="form-signin-heading">User Info Update</h2>
-
+    <div class="row" style="text-align: center;">
+        <h2 class="form-signin-heading" >User Info Update</h2>
+        <img ng-src="{{user.pic}}" class="bottom-margin profile-pic" >
+    </div>
     <div class="row">
         <div class="col-xs-6 col-sm-6 col-md-6">
             <div class="form-group">
